DOCKER/AWS/Terraform_Ansible/vpc_internet_gateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = "${var.vpc_id}"

  tags {
    Name = "igw"
  }
}
